<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:background="#FF33dd"
        android:fontFamily="casual"
        android:text="@string/it_is_textview"
        android:textColor="#106707"
        android:textSize="45sp"
        android:textStyle="bold" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/ii_is_textedit"
        android:textColorHint="#DDDDDD" />
    <!-- ems - атрибут определяет ширину поля ввода текста.
    Одна единица это ширина одной заглавной, латинской буквы M-->

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/it_is_button"
        android:textAllCaps="false"
        android:textSize="45sp" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/it_is_switch"
        android:textOff="@string/switch_off"
        android:textOn="@string/switch_on" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/it_is_checkbox" />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/it_is_togglebutton"
        android:textOff="@string/toggle_off"
        android:textOn="@string/toggle_on" />

</LinearLayout>